objects/bar__Backup_Policy__c.object
<CustomObject>
    <fields>
        <fullName>bar__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bar__Backup_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Backup Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bar__Backup_Files__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Backup Files</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bar__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bar__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Metadata</fullName>
                </value>
                <value>
                    <fullName>Files</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Backup Policy</label>
    <listViews>
        <fullName>bar__All_Backup_Policies</fullName>
        <columns>NAME</columns>
        <columns>bar__Active__c</columns>
        <columns>bar__Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Backup Policies</label>
    </listViews>
    <nameField>
        <label>Backup Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Backup Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>